# texttools

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: models.md  operators.md  prompts.md  tools.md  tools_tutorial.ipynb  utils.md
documentation/: README.md  batch_api_tutorial.ipynb  batch_runner_tutorial.ipynb  batch_runner_usage.ipynb  tools_tutorial.ipynb
examples/: README.md  advanced_usage.py  async_basic_usage.py  async_tools.py  batch_api_usage.ipynb  batch_runner_usage.ipynb  batch_usage.py  category_tree_usage.py  gemma_3n_test.ipynb  gemma_question_detector.ipynb  gemma_translator.ipynb  sync_basic_usage.py  sync_tools.py  test_gemma.py
refactor/: base_tool.py  categorizer.py  test_categorizer.py
tests/: all_async_tools.py  all_tools.py  async.py  gemma_formatter_test.py  logprobs.py  rewriter.py  test_all_async_tools.py  test_all_tools.py  test_category_tree.py  test_keyword_extractor_modes.py  test_logprobs.py  test_output_validation.py  test_text_splitting.py  test_to_chunks.py  test_tools.py  test_vllm_vs_parse.py  thread_safety_asyincio.py  thread_safety_threadpool.py  tools.py  validation.py  vllm_vs_parse.py
tests__tools_TEMPORARY/: test_question_generator.py  test_question_rewriter.py  test_subject_question_generator.py
texttools/: __init__.py  base_tool.py  config.py  models.py
texttools/base/: base_categorizer.py  base_keyword_extractor.py  base_ner_extractor.py  base_question_detector.py  base_question_generator.py  (+5 more)
tutorials/: batch_api_tutorial.ipynb  tools_tutorial.ipynb
(+172 files in other folders)
