[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamtaa-texttools"
version = "0.1.44"
authors = [
  { name = "Tohidi", email = "the.mohammad.tohidi@gmail.com" },
  { name = "Montazer" },
  { name = "Givechi" },
  { name = "MoosaviNejad", email = "erfanmoosavi84@gmail.com"},
]
description = "A set of high-level NLP tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "openai==1.97.1",
  "numpy>=1.26,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["texttools*"]
